--- a/lambda/serverless.yml
+++ b/lambda/serverless.yml
@@ -1,11 +1,13 @@
 
 service: selenium-lambda
-
+# app and org for use with dashboard.serverless.com
+app: shapla-app
+org: rezahok
 
 provider:
   name: aws
   runtime: python3.6
-  region: ap-southeast-2
+  region: us-east-1
   timeout: 900
 
 
@@ -15,3 +17,10 @@ functions:
     layers:
       - ${cf:selenium-layer-dev.SeleniumLayerExport}
       - ${cf:selenium-layer-dev.ChromedriverLayerExport}
+
+plugins:
+  - serverless-python-requirements
+
+custom:
+  pythonRequirements:
+    pythonBin: python3
